[tool.poetry]
name = "copy-progress"
homepage = "https://github.com/cbarond/copy-progress"
version = "0.1.3"
description = "Copy files or directories to a new location with progress bars for each item."
authors = ["Caelan Barondess <cbarondess19@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "copy_progress"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.6.0"

[tool.poetry.scripts]
copy-progress = 'copy_progress.copy:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
